--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = "1.0-3" %}
-
+{% set version = '1.0-3' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,37 +9,41 @@ package:
 source:
   fn: binhf_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/binhf_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/binhf/binhf_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/binhf_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/binhf/binhf_{{ version }}.tar.gz
   sha256: be80a2f060e13e9aee33372f7c7971803169eb95840d8a9a7ae7b6f69116bced
 
 build:
-  number: 0
+  merge_build_host: True  # [win]
+  number: 1
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
+
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
+    - r-ebayesthresh
     - r-adlift >=0.9.2
     - r-wavethresh
-
   run:
     - r-base
+    - r-ebayesthresh
     - r-adlift >=0.9.2
     - r-wavethresh
 
 test:
   commands:
-    - $R -e "library('binhf')"  # [not win]
+    - $R -e "library('binhf')"           # [not win]
     - "\"%R%\" -e \"library('binhf')\""  # [win]
 
 about:
   home: https://CRAN.R-project.org/package=binhf
   license: GPL (>= 2)
-  summary: Binomial Haar-Fisz transforms for Gaussianization
+  summary: Binomial Haar-Fisz transforms for Gaussianization as in Nunes and Nason (2009).
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
   license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
@@ -51,3 +54,5 @@ extra:
     - bgruening
     - daler
     - jdblischak
+    - cbrueffer
+    - dbast
